workshop/wisecloud-project/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecloud-mdm
  namespace: wisecloud-mdm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mdm.wisecloud.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecloud-mdm
                port:
                  number: 8080
